--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
 body {
     font-family: Arial, Helvetica, sans-serif
     color: #777;
-    background-color: #777
+    background: #777
+    width: 960px;
+    font-size: 18px
+
+header {
+    background: #ebebeb
+}
+nav {
+
+}
+section {
+
+}
+aside {
+
+}
+footer{
+
+}
+
 }
